--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "Allows you to copy all cookies for a given page to your clipboard as a csv.",
+    "message": "Cookie auditing tool developed by Microsoft. This tool will copy the name, domain, path, and expiration date of all browser cookies to the clipboard in CSV format. Note, this extension DOES NOT copy the values, nor ay PII from the cookies.",
     "description": "The description of the application"
   }
 }
